--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
 body {
   background: grey;
   color: black;
+  font-family: 'Galada', cursive;
   font-weight: 300;
   font-size: 16px;
   letter-spacing: .025rem;
