--- a/styles/base.css
+++ b/styles/base.css
@@ -73,7 +73,7 @@ iframe {
 .banner {
   min-height: 25vh;
   padding: 5rem 1rem;
-  background-img: url('../cement-color-concrete-design-1260727.jpg');
+  background-image: url('../cement-color-concrete-design-1260727.jpg');
   background-position: center; 
 }
   
