--- a/styles/base.css
+++ b/styles/base.css
@@ -87,7 +87,7 @@ iframe {
   text-align: right;
   background: #1a1a1a;
   color: white;
-  border: 10px solid #e76c46;
+  border: 10px solid #ea7e5d;
   font-size: 3.5rem;
 }
     
