--- a/styles/base.css
+++ b/styles/base.css
@@ -77,7 +77,7 @@ iframe {
   background-position: center;
   background-repeat: no-repeat;
   object-fit: cover; 
-  text-align: center;
+  text-align: left;
 }
   
 .banner-text{
