--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 /* Base styles */
 
 body {
-  background: light grey;
+  background: gold;
   color: black;
   font-family: 'Galada', cursive;
   font-weight: 300;
