--- a/styles/base.css
+++ b/styles/base.css
@@ -1,8 +1,8 @@
 /* Base styles */
 
 body {
-  background: gold;
-  color: black;
+  background: black;
+  color: white;
   font-family: 'Galada', cursive;
   font-weight: 300;
   font-size: 16px;
