--- a/styles/base.css
+++ b/styles/base.css
@@ -106,7 +106,7 @@ iframe {
 }
 
 .btn-1 {
-  background: #ff5a1d;
+  background: #000000;
   color: #7a7a7a;
   padding: 1rem;
   text-transform: uppercase;
