--- a/styles/base.css
+++ b/styles/base.css
@@ -106,12 +106,13 @@ iframe {
 }
 
 .btn-1 {
-  background: #000000;
+  background: #ff5a1d;
   color: #7a7a7a;
   padding: 1rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   border-radius: .25rem;
+  font-family: 'Acme', sans-serif;
   font-size: .9rem;
   border: 1px solid white;
   transition: border .3sec ease; 
