--- a/styles/base.css
+++ b/styles/base.css
@@ -107,7 +107,7 @@ iframe {
 
 .btn-1 {
   background: #ff5a1d;
-  color: #7a7a7a;
+  color: #000000;
   padding: 1rem;
   text-transform: uppercase;
   letter-spacing: 2px;
