--- a/styles/base.css
+++ b/styles/base.css
@@ -88,6 +88,7 @@ iframe {
   text-align: right;
   background: #1a1a1a;
   color: white;
+  font-family: 'Montserrat', sans-serif;
   border: 10px solid #ea7e5d;
   font-size: 3.5rem;
   max-width: 450px;
