--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,7 @@
 body {
   background: black;
   color: white;
-  font-family: 'Galada', cursive;
+  font-family: 'PT Sans Narrow', sans-serif;
   font-weight: 300;
   font-size: 16px;
   letter-spacing: .025rem;
