--- a/styles/base.css
+++ b/styles/base.css
@@ -89,7 +89,7 @@ iframe {
   background: #1a1a1a;
   color: white;
   font-family: 'Montserrat', sans-serif;
-  border: 10px solid #ea7e5d;
+  border: 10px solid #9a9a9a;
   font-size: 3rem;
   max-width: 450px;
 }
