--- a/styles/base.css
+++ b/styles/base.css
@@ -74,7 +74,7 @@ iframe {
   min-height: 20vh;
   padding: 4rem 1rem;
   background-image: url('../architectural-design-architecture-buildings-city-373893.jpg');
-  background-position: center;
+  background-position: right;
   background-repeat: no-repeat;
   object-fit: cover; 
   text-align: left;
