--- a/styles/base.css
+++ b/styles/base.css
@@ -105,11 +105,11 @@ iframe {
 }
 
 .favorites-sport {
-  background: #aa5656
+  background: #bbbbff
 }
 
 .favorites-vacation {
-  background: #c04141
+  background: #002b54
 }
 
 .footer {
